--- a/app/templates/main/thanks.html
+++ b/app/templates/main/thanks.html
@@ -6,9 +6,9 @@
  <div class="ui placeholder segment">
   <div class="ui icon header">
    <h1>Thank You</h1>
-    <i class="times circle outline icon"></i>
+    <i class="hourglass start icon"></i>
     <h1>Order Received</h1>
-	<h3>We have began processing your research project and we will be in contact as soon as we are ready.</h3>
+	<h3>We have started to process your research project and we will be in contact as soon as we are ready.</h3>
   </div>
 
 </div>
