--- a/app/templates/organisations/org_dashboard.html
+++ b/app/templates/organisations/org_dashboard.html
@@ -64,13 +64,13 @@
                             <td>{{ u.org_state }}</td>
                             <td>{{ u.org_country }}</td>
                             <td>
-                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">View Org Details</a>
+                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">Org Details</a>
                             </td>
                             <td>
-                                <a class="ui primary button" href="{{ url_for('project.index') }}">View Project Details</a>
+                                <a class="ui primary button" href="{{ url_for('project.index') }}">Project Details</a>
                             </td>
 							<td>
-                                <a class="ui teal button" href="{{ url_for('project.new_project', org_id=u.id) }}">Create Research Project</a>
+                                <a class="ui teal button" href="{{ url_for('project.new_project', org_id=u.id) }}">Create Project</a>
                             </td>
                         </tr>
                     {% endfor %}
