--- a/app/templates/question/create_multiple_choice_question.html
+++ b/app/templates/question/create_multiple_choice_question.html
@@ -17,7 +17,16 @@
                 Create a multiple choice based question
                 <div class="sub header">Add a scale based question</div>
             </h2>
-
+			<div class="ui segment">
+				<div class="sub header">How to fill this section</div>
+				<div class="ui ordered list">
+				  <div class="item">Add the question in the box provided e.g "Do you eat ice vanilla ice creams?</div>
+				  <div class="item">Add a description E.g "This question is for those who like vanilla ice cream"</div>
+				  <div class="item">Add answer options which will appear to the respondents e.g "Yes"</div>
+				  <div class="item">Add another answer option which will appear to the respondents e.g "No"</div>
+				  <div class="item">Add another answer option which will appear to the respondents e.g "Maybe"</div>
+				</div>
+			</div>
             {% set flashes = {
                 'error':   get_flashed_messages(category_filter=['form-error']),
                 'warning': get_flashed_messages(category_filter=['form-check-email']),
