--- a/app/templates/question/edit_screener_question.html
+++ b/app/templates/question/edit_screener_question.html
@@ -47,7 +47,8 @@
             {% endfor %}
 
             {{ f.end_form() }}
-
+			
+		<a class="ui primary right floated button" href="{{ url_for('project.project_details', org_id=org.id, project_id=project.id, name=project.name) }}">Back</a>
         </div>
     </div>
 {% endblock %}
