--- a/app/templates/answer/add_screener_answer.html
+++ b/app/templates/answer/add_screener_answer.html
@@ -20,12 +20,7 @@
 			<div class="ui segment">
 				<div class="sub header">How to fill this section</div>
 				<div class="ui ordered list">
-				  <div class="item">Add the question in the box provided e.g "Do you eat ice vanilla ice creams?</div>
-				  <div class="item">Add a description E.g "This question is for those who like vanilla ice cream"</div>
-				  <div class="item">Add a required answer. This helps us know who should continue to answer the rest of the questions</div>
-				  <div class="item">Add answer options which will appear to the respondents e.g "Yes"</div>
-				  <div class="item">Add another answer option which will appear to the respondents e.g "No"</div>
-				  <div class="item">Add another answer option which will appear to the respondents e.g "Maybe"</div>
+				  <div class="item">Place a tick in the circle which represents your answer and then press submit. </div>
 				</div>
 			</div>
             {% set flashes = {
@@ -59,10 +54,6 @@
 				{% endfor %}
 
 				{{ f.end_form() }}
-				<div class="ui right floated primary button">
-					  Buy tickets
-					  <i class="right chevron icon"></i>
-				</div>
 
 			</div>
 			{% endif %}
