--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -28,9 +28,9 @@
             {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
     {% elif current_user.is_authenticated %}
       {% set user = ([
-		  ('organisations.org_home', 'Organization Dashboard', 'building'),
-		  ('project.index', 'Project Dashboard', 'folder open'),
-		  ('question.index', 'Question Dashboard', 'tasks')
+		  ('organisations.org_home', 'Organizations', 'building'),
+		  ('project.index', 'Projects', 'folder open'),
+		  ('question.index', 'Questions', 'tasks')
 	  ]) %}
     {% endif %} 
     {{ render_menu_items( endpoints +  user ) }}
