--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+{% if current_user.is_respondent %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
                 <a class="ui basic compact button" href="{{ url_for('question.index') }}">
@@ -22,39 +23,50 @@
 
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
-				  <a class="item" href="{# url_for('question.edit_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="edit outline icon"></i></a>
 				  <a class="item" href="{{ url_for('answer.add_screener_answer', project_id=project.id, question_id=screener_question.id, question=screener_question.question) }}"><i class="eye icon"></i></a> 
 				</div>
 			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header">{{screener_question.description }}</h5>
-			  <p></p>
+			  {% if screener_answer %}
+			  <div class="ui divider"></div>
+			  	<p> Answer: {{ screener_answer.answer_option_one}}</p>
+				{% endif %}
 			</div>
+
 			{% endif %}
 
-			{% for item in question %}
-				{% if item.scale_question %}
+			{% for item in scale_question %}
+				{% if item %}
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
-				  <!---<a class="item" href="#"><i class="edit outline icon"></i></a>
-				  <a class="item" href="#"><i class="plus square outline icon"></i></a>---->
+				  <a class="item" href="{{ url_for('answer.add_scale_answer', project_id=project.id, question_id=item.id, question=item.title) }}"><i class="eye icon"></i></a> 
 				</div>
-			  <h3 class="ui left floated header">{{ item.scale_question.title }}</h3>
+			  <h3 class="ui left floated header">{{ item.title }}</h3>
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header"></h5>
-			  <p>{{ item.scale_question.description }}</p>
+			  <p>{{ item.description }}</p>
+			  {% if scale_answer.scale_question_id == scale_question.id %}
+			  <div class="ui divider"></div>
+			  	<p> Answer: {{ scale_answer.option_one_answer }}</p>
+				{% endif %}
 			</div>
 			 		{% endif %}	
-				{% if item.multiple_choice_question %}
+			{% endfor %}
+			{% for item in multiple_choice_question %}
+				{% if item %}
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
-				  <!---<a class="item" href="#"><i class="edit outline icon"></i></a>
-				  <a class="item" href="#"><i class="plus square outline icon"></i></a>---->
+				  <a class="item" href="{{ url_for('answer.add_multiple_choice_answer', project_id=project.id, question_id=item.id, question=item.title) }}"><i class="eye icon"></i></a> 
 				</div>
-			  <h3 class="ui left floated header">{{ item.multiple_choice_question.title }}</h3>
+			  <h3 class="ui left floated header">{{ item.title }}</h3>
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header"></h5>
-			  <p>{{ item.multiple_choice_question.description }}</p>
+			  <p>{{ item.description }}</p>
+			  {% if multiple_choice_answer.multiple_choice_question_id == item.id %}
+			  <div class="ui divider"></div>
+			  	<p> Answer: {{ multiple_choice_answer.multiple_choice_option_one }}</p>
+				{% endif %}
 			</div>
 			 		{% endif %}	
 			{% endfor %}			
@@ -62,4 +74,18 @@
 
         </div>
     </div>
+	
+{% else %}
+	<div class="ui text container">
+	 <div class="ui placeholder segment">
+	  <div class="ui icon header">
+		<i class="user secret icon"></i>
+		<h1> Only respondents can access this area</h1>
+		<h3>You are either trying to access a protected page or the page doesn't exit. Use navigation bar to go back. </h3>
+	  </div>
+
+	</div>
+	</div>
+{% endif %}
+
 {% endblock %}
