--- a/app/templates/project/create_project.html
+++ b/app/templates/project/create_project.html
@@ -9,9 +9,9 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-                <a class="ui basic compact button" href="{{ url_for('project.index') }}">
+                <a class="ui basic compact button" href="{{ url_for('organisations.org_home') }}">
                 <i class="caret left icon"></i>
-                Back to "{{ org.org_name }}" Project' dashboard
+                Back to "{{ org.org_name }}" Organization' dashboard
             </a>
             <h2 class="ui header">
                 Create a new project
