--- a/app/templates/main/thanks.html
+++ b/app/templates/main/thanks.html
@@ -12,6 +12,23 @@
   </div>
 
 </div>
+{% for dict_item in events %}
+   {% for key, value in dict_item.items() %}
+<table class="ui celled table">
+  <thead>
+
+    <tr>
+      <td>Key: {{key}}</td>
+      <td>May 11, 2014</td>
+      <td>Value: {{value}}</td>
+
+    </tr>
+  </tbody>
+</table>
+   {% endfor %}
+
+{% endfor %}
 </div>
+
 
 {% endblock %}
