Added paid projects
Added paid projects. This will serve as an association of questions and answers for users who have paid.

--- a/app/templates/main/thanks.html
+++ b/app/templates/main/thanks.html
@@ -12,22 +12,8 @@
   </div>
 
 </div>
-{% for dict_item in events %}
-   {% for key, value in dict_item.items() %}
-<table class="ui celled table">
-  <thead>
+{{ question.description }}
 
-    <tr>
-      <td>Key: {{key}}</td>
-      <td>May 11, 2014</td>
-      <td>Value: {{value}}</td>
-
-    </tr>
-  </tbody>
-</table>
-   {% endfor %}
-
-{% endfor %}
 </div>
 
 
