--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -35,10 +35,6 @@
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
                 <a class="ui teal left floated button" href="{{ url_for('project.new_project', org_id=org.id) }}">Create New Project</a>
-		       {% if count_questions >= 10 %}
-				        <a href="#" id="buy_now_btn" class="ui teal right floated button">Pay & Submit Questions</a>
-			   {% else %}
-			   {% endif %}
 			</div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
@@ -52,7 +48,7 @@
                         <th>Service Category</th>
                         <th>Service Currency</th>
                         <th>Edit Project Details</th>
-                        <th>Add Research Details</th>
+                        <th>Questions Area</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -68,7 +64,7 @@
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('project.project_details', org_id=org.id, project_id=u.id, name=u.name) }}">Add</a>
+                                <a class="ui blue left floated button" href="{{ url_for('project.project_details', org_id=org.id, project_id=u.id, name=u.name) }}">Enter</a>
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
