Some edits on answers
Some edits on answers

--- a/app/templates/answer/add_screener_answer.html
+++ b/app/templates/answer/add_screener_answer.html
@@ -32,17 +32,17 @@
 
             {{ f.begin_form(form, flashes) }}
 
-			{% if screener_question %}
-
+			{% if question %}
 			<div class="ui segment">
 				<div class="ui right floated horizontal list"> 
 				</div>
-			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
+			  <h3 class="ui left floated header">Screener Question : {{ question.question }}</h3>
 			  <div class="ui clearing divider"></div>
-			  <h5 class="ui header">{{screener_question.description }}</h5>
+			  <h5 class="ui header">{{ question.description }}</h5>
 			  <p></p>
+			  <div class="ui clearing divider"></div>
 				<div class="field">
-					{{ f.render_form_field(form.answer_option_one) }}
+					{{ form.answer_option_one }}
 				</div>
 				{{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
 				{{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
@@ -54,9 +54,10 @@
 				{% endfor %}
 
 				{{ f.end_form() }}
-
 			</div>
 			{% endif %}
         </div>
     </div>
+	{{ screener_question.required_answer }}
+	{{ answer. answer_option_one }}
 {% endblock %}
