--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -19,19 +19,19 @@
                 <div class="sub header">Project's questions</div>
             </h2>
 
-			{% if screener_question %}
+			{% if question.question_type == "Screener" %}
 
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
-				  <a class="item" href="{{ url_for('answer.add_screener_answer', project_id=project.id, question_id=screener_question.id, question=screener_question.question) }}"><i class="eye icon"></i></a> 
+				  <a class="item" href="{{ url_for('answer.add_screener_answer', project_id=project.id, id=question.id, question=question.question) }}"><i class="eye icon"></i></a> 
 				</div>
-			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
+			  <h3 class="ui left floated header">Screener Question : {{ question.question }}</h3>
 			  <div class="ui clearing divider"></div>
-			  <h5 class="ui header">{{screener_question.description }}</h5>
-			  {% if screener_answer %}
+			  <h5 class="ui header">{{ question.description }}</h5>
+			  {# if screener_answer #}
 			  <div class="ui divider"></div>
-			  	<p> Answer: {{ screener_answer.answer_option_one}}</p>
-				{% endif %}
+			  	<p> Answer: {# screener_answer.answer_option_one#}</p>
+				{# endif #}
 			</div>
 
 			{% endif %}
@@ -46,10 +46,10 @@
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header"></h5>
 			  <p>{{ item.description }}</p>
-			  {% if item.scale_answer %}
+			  {# if item.scale_answer #}
 			  <div class="ui divider"></div>
-			  	<p> Answer: {{ scale_answer.option }}</p>
-				{% endif %}
+			  	<p> Answer: {# scale_answer.option #}</p>
+				{# endif #}
 			</div>
 			 		{% endif %}	
 			{% endfor %}
@@ -63,10 +63,10 @@
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header"></h5>
 			  <p>{{ item.description }}</p>
-			  {% if multiple_choice_answer.multiple_choice_question_id == item.id %}
+			  {# if multiple_choice_answer.multiple_choice_question_id == item.id #}
 			  <div class="ui divider"></div>
-			  	<p> Answer: {{ multiple_choice_answer.multiple_choice_option_one }}</p>
-				{% endif %}
+			  	<p> Answer: {# multiple_choice_answer.multiple_choice_option_one #}</p>
+				{# endif #}
 			</div>
 			 		{% endif %}	
 			{% endfor %}			
